# FrameTrain-App

./: .gitignore  CHANGELOG_v1.0.8.md  RELEASE_v1.0.8.md  UPDATE_SETUP.md  UPDATE_SYSTEM.md  package-lock.json  package.json  release copy.sh  tsconfig.json
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/python/: lab_inference.py  plugin_manager.py  split_dataset.py
src-tauri/python/test_engine/: IMPLEMENTATION_COMPLETE.md  README.md  model_server.py  test_engine.py
src-tauri/python/test_engine/core/: __init__.py  config.py  plugin_base.py  protocol.py
src-tauri/python/test_engine/plugins/: __init__.py
src-tauri/python/test_engine/plugins/audio/: plugin.py
src-tauri/python/test_engine/plugins/detection/: plugin.py
src-tauri/python/test_engine/plugins/nlp/: plugin.py
src-tauri/python/test_engine/plugins/seq_classification/: __init__.py  plugin.py
src-tauri/python/test_engine/plugins/tabular/: plugin.py
src-tauri/python/test_engine/plugins/vision/: plugin.py
src-tauri/python/train_engine/: train_engine.py
src-tauri/python/train_engine/core/: __init__.py  config.py  dataset_manager.py  metrics.py  plugin_base.py  protocol.py
src-tauri/python/train_engine/plugins/audio/: __init__.py  plugin.py
src-tauri/python/train_engine/plugins/detection/: __init__.py  (+1 more)
src-tauri/src/: analysis_manager.rs  api_config.rs  database.rs  dataset_manager.rs  dev_trainer.rs  laboratory_manager.rs  main.rs  ml_backend.rs  model_manager.rs  plugin_commands.rs  power_manager.rs  test_manager.rs  training_manager.rs  version_manager.rs
(+48 files in other folders)
