[package]
name = "frametrain-desktop"
version = "1.2.3"
description = "FrameTrain Desktop App"
authors = ["FrameTrain Team"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
dotenvy = "0.15"

tauri-plugin-os = "2"
tauri-plugin-shell = "2"
tauri-plugin-fs = "2"
tauri-plugin-dialog = "2"
tauri-plugin-updater = "2"

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

rusqlite = { version = "0.30", features = ["bundled"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.6", features = ["v4", "serde"] }
rand = "0.8"
dirs = "5.0"

reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }

urlencoding = "2.1"

[features]
default = []
